# shift_test

./: .gitignore  AGENTS.md  README.md  constraints.txt  pyproject.toml  requirements.txt
scripts/: build_exe.py
src/scheduler_app/: __init__.py  __main__.py
src/scheduler_app/core/: engine.py  models.py
src/scheduler_app/data/: repository.py
src/scheduler_app/rules/: base.py
src/scheduler_app/services/: exporter.py  snapshots.py
src/scheduler_app/ui/: main_window.py
tests/: test_scheduler.py
